<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="favorite_btn">Favorites</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="play_list">PlayList</string>
    <string name="total_songs">Total songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="start_music">00:00</string>
    <string name="end_music">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="share_btn">Share</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="app_icon">AppIcon</string>
    <string name="Feedback">Feedback</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="text_nav">Welcome</string>
    <string name="song_album">Song Album</string>
    <string name="search_view">Search</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove all</string>
    <string name="search_song">Search song</string>
    <string name="about">Search song</string>
</resources>